# leda

./: .gitignore  README.md  get_basic_stats_example.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py
.cursor/rules/: python.mdc
examples/: basic_usage_fixed.py  serializer_usage.py
leda/: __init__.py  _version.py
leda/config/: __init__.py  defaults.py  schemas.py
leda/core/: __init__.py  association_metrics.py  base_analyzer.py  basic_stats.py  categorical_stats.py  data_profiler.py  numerical_stats.py
leda/exceptions/: __init__.py  base_exception.py  data_exceptions.py  visualization_exceptions.py
leda/serializers/: __init__.py  base_serializer.py  compression.py  format_negotiator.py  json_serializer.py  msgpack_serializer.py  streaming.py
leda/utils/: __init__.py  data_utils.py  io_utils.py  plot_utils.py
tests/: conftest.py  test_serializers.py  test_serializers_fixed.py
